# gecko

./: .gitignore  CLAUDE.md  README.md  beta_table.csv  pyproject.toml  test.py
dalton_probe_out/H2O/cc_pVDZ/: H2O_cc-pVDZ.dal  H2O_cc-pVDZ.mol
data/csv_data/: shg_nlo_ijk.csv
docs/: bts63_probe_results.md  bts75_daltonproject_alpha_parser_issue.md  daltonproject_api_notes.md  dev_notes.md
docs/dev/: shg_pipeline.md
docs/tutorials/: beta_viewer_quickstart.md  loading_and_workflows.md  shg_pipeline.md
notebooks/: nlo_test.ipynb
scripts/: daltonproject_probe.py  gen_param_models.py
src/gecko/: __init__.py  cli.py  enrich.py  fixture_manager.py  ids.py  index.py  madness_mcp_server.py  mcp_server.py  molecule_id.py  molecule_resolver.py
src/gecko/core/: iterators.py  load.py  model.py
src/gecko/madnessproject/: output_reader.py
src/gecko/mol/: __init__.py  io.py  resolver.py
src/gecko/molecule/: __init__.py  canonical.py
src/gecko/recipes/: shg_csv.py
src/gecko/tables/: __init__.py  builder.py  extractors.py  shg.py
src/gecko/viz/: README.md  __init__.py  fields.py  io.py  omega.py  state.py  vtk_scene.py
src/gecko/workflow/: __init__.py  geometry.py  hpc.py  input_model.py  input_parser.py  input_serializer.py  jobstore.py  params.py  remote.py  writers.py
tests/: shg_csv_test.py  test_calc_index_molecule_id.py  test_dalton_parser.py  test_dalton_plugin.py  test_ids.py  test_madness_beta_component_styles.py  test_madness_style_selection.py  test_mcp_servers.py  test_mol_resolver.py  test_molecule_canonicalization.py  test_molecule_id.py  test_shg_geometry_table.py  test_shg_pipeline.py  test_viz_io.py  test_viz_omega.py
tests/contracts/: test_daltonproject_alpha_parser.py  test_table_alpha_compare_long_contract.py  test_table_beta_compare_long_contract.py
tests/fixtures/: mol_map.json
tests/workflow/: test_geometry.py  test_hpc.py  test_hpc_phase2.py  test_jobstore.py  test_madness_input.py  test_params.py  test_remote.py  test_writers.py
(+556 files in other folders)
