[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gecko"
version = "0.0.0"
description = "Unified toolkit for parsing, analyzing, and visualizing quantum response data"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
  { name = "Adrian Hurtado", email = "ahurta92@gmail.com" }
]

dependencies = []

[project.scripts]
gecko = "gecko.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov",
  "ruff",
  "mypy",
]

viz = [
  "pyvista",
  "vtk",
  "matplotlib",
  "pandas",
]

apps = [
  "trame",
  "trame-vuetify",
  "trame-vtk",
]

all = [
  "gecko[dev,viz,apps]",
]
