[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gecko"
version = "0.0.0"
description = "Unified toolkit for parsing, analyzing, and visualizing quantum response data"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }

authors = [
  { name = "Adrian Hurtado", email = "ahurta92@gmail.com" }
]

dependencies = [
  "scipy",
  "qcelemental @ git+https://github.com/ahurta92/QCElemental.git@928af03",
  "sphinx",
  "nglview",
  "matplotlib",
  "pandas",
  "trame",
  "trame-vuetify",
  "pint",
  "requests",
  "pydantic>=2.0",
  "mcp>=1.0",
]

[project.scripts]
gecko = "gecko.cli:main"
gecko-mcp = "gecko.mcp_server:main"
gecko-madness-mcp = "gecko.madness_mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov",
  "ruff",
  "mypy",
]

viz = [
  "pyvista",
  "vtk",
]

apps = [
  "trame",
  "trame-vuetify",
  "trame-vtk",
]

hpc = [
  "paramiko",
]

all = [
  "gecko[dev,viz,apps,hpc]",
]
